# cpp_backtester

./: CMakeLists.txt  Nuovo Documento di testo.txt  README.md  data.csv
examples/: backtesting.cpp  main.cpp
include/: Results.h  broker.h  data.h  engine.h  engine_s.h  results.cpp  results.h  risk_manager.h  strategy.h  strategy_h.h  ta.h  ta_s.h  utilities.h
src/: broker.cpp  data.cpp  engine.cpp  engine_s.cpp  main.cpp  results.cpp  risk_manager.cpp  strategy.cpp  strategy_s.cpp  ta.cpp  utilities.cpp
test_data/: NVDA.csv
